# astrometry_geomap

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .mypy.ini  .travis.yml  AverageImageStack.py  LICENSE.txt  LocateCrop.py  PlateScale.py  PlateScaleFITS.py  PlotGeomap.py  PlotOverlay.py  PrintSourceRaDec.py  README.md  README.rst  Readme_build.md  downloadIndex.py  get_data.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_data.sh
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml  modifyFITSheaderAstrometry.m
astrometry_azel/: __init__.py  base.py  datetime2hourangle.py  fits2azel.py  imgAvgStack.py  io.py  plots.py  utils.py  web.py
astrometry_azel/tests/: apod4.new  test_all.py
scripts/: AverageImageStack.py  LocateCrop.py  OverlayAltitudes.py  OverlayStars.py  PlateScaleFITS.py  PrintSourceRaDec.py
src/astrometry_azel/: __init__.py  __main__.py  base.py  io.py  plots.py  project.py  projection.py  utils.py  web.py
src/astrometry_azel/download/: __main__.py
src/astrometry_azel/plot/: __init__.py  project.py
src/astrometry_azel/tests/: __init__.py  apod4.fits  apod4.new  apod4.wcs  test_all.py
test/: apod4.fits  apod4.wcs  credits.txt  test.py
tests/: apod4.fits  apod4.new  apod4.wcs  test.py  test_all.py
