[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrometry_azel"
version = "1.3.0"
description = "Register images to geographic maps using the astrometry.net program"
keywords = ["astrometry", "plate-scale", "astronomy", "aurora"]
classifiers = [
  "5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["readme"]
requires-python = ">=3.8"
dependencies = ["python-dateutil", "numpy", "astropy", "xarray", "netcdf4"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy", "types-python-dateutil"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]
allow_redefinition = true
show_error_context = false
show_column_numbers = true
ignore_missing_imports = true
