[build-system]
requires = ["setuptools>=66.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrometry_azel"
description = "Register images to geographic maps using the astrometry.net program"
keywords = ["astrometry", "plate-scale", "astronomy", "aurora"]
classifiers = [
  "5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["readme", "version"]
requires-python = ">=3.10"
dependencies = ["numpy", "astropy", "xarray", "netcdf4"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "astrometry_azel.__version__"}

[tool.black]
line-length = 100

[tool.mypy]
files = ["src"]
allow_redefinition = true
ignore_missing_imports = true
