[metadata]
name = astrometry_azel
url = https://github.com/scivision/astrometry_azel
version = 1.2.1
author = Michael Hirsch, Ph.D.
description = Register images to az/el using the astrometry.net program
keywords =
  astrometry
  plate-scale
  astronomy
  aurora
classifiers = 
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires = 
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires = 
  python-dateutil
  numpy
  astropy
  xarray
  pymap3d
  
[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
io = 
  scipy
  h5py
  imageio
  netcdf4
plot = 
  matplotlib
  seaborn
  
[options.entry_points]
console_scripts =
  downloadIndex = downloadIndex:main
  PlateScaleFITS = PlateScaleFITS:main
  PlateScale = PlateScale:main
  PrintSourceRaDec = PrintSourceRaDec:main

[flake8]
max-line-length = 132
ignore = E501
exclude = .git/,.eggs/,__pycache__/,*.egg-info/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */pymap3d/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  RuntimeError
  NotImplementedError
  ImportError
  FileNotFoundError
  CalledProcessError
  TypeError
  ValueError
  OSErr
  if __name__ == '__main__'


