[metadata]
name = astrometry_azel
version = 1.2.4
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Register images to az/el using the astrometry.net program
url = https://github.com/space-physics/astrometry_azel
keywords =
  astrometry
  plate-scale
  astronomy
  aurora
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
zip_safe = False
install_requires =
  python-dateutil
  numpy
  astropy
  xarray

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
all =
  scipy
  h5py
  netcdf4
  imageio
  matplotlib
  seaborn
  pymap3d

[options.entry_points]
console_scripts =
  downloadIndex = downloadIndex:main
  PlateScaleFITS = PlateScaleFITS:main
  PlateScale = PlateScale:main
  PrintSourceRaDec = PrintSourceRaDec:main
