[metadata]
name = astrometry_azel
version = 1.3.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Register images to az/el using the astrometry.net program
url = https://github.com/space-physics/astrometry_azel
keywords =
  astrometry
  plate-scale
  astronomy
  aurora
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
zip_safe = False
install_requires =
  python-dateutil
  numpy
  astropy
  xarray
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy >= 0.800
all =
  scikit-image
  scipy
  h5py
  netcdf4
  imageio
  matplotlib >= 3.1
  seaborn
  pymap3d
